Export result and indexer